rearrange, exprlist, fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,33 @@ project(matlog)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_library(grammar STATIC utils/grammar.h utils/grammar.cpp)
+add_library(grammar STATIC
+        grammar/lib.h
 
-add_executable(tests test.cpp parser/parser.h parser/parser.cpp)
+        grammar/grammar.h
+        grammar/grammar.cpp
 
-add_executable(task1 task1_parse.cpp parser/parser.h parser/parser.cpp)
+        grammar/proof.h
+        grammar/proof.cpp
 
-add_executable(task2 task2_minimize.cpp parser/parser.h parser/parser.cpp proof/proof_parser.h proof/proof_parser.cpp)
+        grammar/expression.h
+        grammar/expression.cpp)
+
+add_executable(tests test.cpp
+        parser/parser.h
+        parser/parser.cpp)
+
+add_executable(task1 task1_parse.cpp
+        parser/parser.h
+        parser/parser.cpp
+        parser/parser_error.h)
+
+add_executable(task2 task2_minimize.cpp
+        parser/parser.h
+        parser/parser.cpp
+        proof/proof_parser.h
+        proof/proof_parser.cpp
+        parser/parser_error.h)
 
 target_link_libraries(tests grammar)
 
