--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ add_library(parser STATIC
         parser/proof_parser.h
         parser/proof_parser.cpp
 
-        parser/parser_error.h)
+        parser/errors.h)
 
 target_link_libraries(parser grammar)
 
@@ -31,11 +31,15 @@ add_executable(task1 task1_parse.cpp)
 
 add_executable(task2 task2_minimize.cpp)
 
+add_executable(task3 task3_arithmetic.cpp)
+
 target_link_libraries(tests grammar parser)
 
 target_link_libraries(task1 grammar parser)
 
 target_link_libraries(task2 grammar parser)
+
+target_link_libraries(task3 grammar parser)
 
 if (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -ggdb -std=c++17 -pedantic -O2 -flto")
